[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
bs4 = "^0.0.1"
Flask = "^2.0.3"
pylatexenc = "^2.10"
maya = "^0.6.1"
replit = "^3.2.4"
treelib = "^1.6.1"
requests = "^2.27.1"
aiohttp = "^3.8.1"
nextcord = "^2.0.0-alpha.9"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"